--- a/src/main/resources/language/en.yml
+++ b/src/main/resources/language/en.yml
@@ -1,13 +1,14 @@
 party:
   has_no_party: "<blue>[</blue>Party<blue>]</blue><red> You don't have a party</red>"
   has_party: "<blue>[</blue>Party<blue>]</blue><red> You already have a party</red>"
-  target_do_not_exist: "<blue>[</blue>Party<blue>]</blue><red> Player <gold>%name%</gold> never joined the server</red>"
-  target_not_online: "<blue>[</blue>Party<blue>]</blue><red> Player <gold>%name%</gold> is offline</red>"
-  target_has_party: "<blue>[</blue>Party<blue>]</blue><red> Player <gold>%name%</gold> is in a party</red>"
-  target_has_no_party: "<blue>[</blue>Party<blue>]</blue><red> Player <gold>%name%</gold> has no party</red>"
-  target_not_in_your_party: "<blue>[</blue>Party<blue>]</blue><red> Player <gold>%name%</gold> is not in your party</red>"
-  target_in_your_party: "<blue>[</blue>Party<blue>]</blue><red> Player <gold>%name%</gold> is already in your party</red>"
+  target_do_not_exist: "<blue>[</blue>Party<blue>]</blue><red> <gold>%name%</gold> never joined the server</red>"
+  target_not_online: "<blue>[</blue>Party<blue>]</blue><red> <gold>%name%</gold> is offline</red>"
+  target_has_party: "<blue>[</blue>Party<blue>]</blue><red> <gold>%name%</gold> is in a party</red>"
+  target_has_no_party: "<blue>[</blue>Party<blue>]</blue><red> <gold>%name%</gold> has no party</red>"
+  target_not_in_your_party: "<blue>[</blue>Party<blue>]</blue><red> <gold>%name%</gold> is not in your party</red>"
+  target_in_your_party: "<blue>[</blue>Party<blue>]</blue><red> <gold>%name%</gold> is already in your party</red>"
   join_arguments: "<blue>[</blue>Party<blue>]</blue><red> /%label% join <gold><player></gold></red>"
+  info_arguments_console: "<blue>[</blue>Party<blue>]</blue><red> /%label% info <gold><player></gold></red>"
   invite_arguments: "<blue>[</blue>Party<blue>]</blue><red> /%label% invite <gold><player></gold></red>"
   kick_arguments: "<blue>[</blue>Party<blue>]</blue><red> /%label% kick <gold><player></gold></red>"
   leader_arguments: "<blue>[</blue>Party<blue>]</blue><red> /%label% leader <gold><player></gold></red>"
@@ -19,3 +20,47 @@ party:
   leave_leader_must_disband: "<blue>[</blue>Party<blue>]</blue><red> Cannot leave, set a new Leader or disband</red>"
   already_opened: "<blue>[</blue>Party<blue>]</blue><red> Party is already public</red>"
   already_closed: "<blue>[</blue>Party<blue>]</blue><red> Party is already closed</red>"
+  notify_player_join: "<blue>[</blue>Party<blue>]</blue><aqua> <yellow>%name%</yellow> joined the party</aqua>"
+  notify_player_kick: "<blue>[</blue>Party<blue>]</blue><aqua> <yellow>%name%</yellow> was kicked from the party</aqua>"
+  notify_player_leave: "<blue>[</blue>Party<blue>]</blue><aqua> <yellow>%name%</yellow> has left the party</aqua>"
+  notify_leader_change: "<blue>[</blue>Party<blue>]</blue><aqua> <yellow>%from%</yellow> passed party leader to <yellow>%to%</yellow></aqua>"
+  kicked: "<blue>[</blue>Party<blue>]</blue><red> <gold>%who%</gold> kicked you out of the party</red>"
+  success_join: "<blue>[</blue>Party<blue>]</blue><green> You joined the party</green>"
+  success_leave: "<blue>[</blue>Party<blue>]</blue><green> You left the party</green>"
+  success_create: "<blue>[</blue>Party<blue>]</blue><green> You created a party</green>"
+  notify_party_private: "<blue>[</blue>Party<blue>]</blue><aqua> Party is now private (open with invite)</aqua>"
+  notify_party_disband: "<blue>[</blue>Party<blue>]</blue><aqua> <yellow>%name%</yellow> disbanded the party</aqua>"
+  notify_party_public: "<blue>[</blue>Party<blue>]</blue><aqua> Party is now public (open to anyone)</aqua>"
+  public_invite: "<blue>[</blue>Party<blue>]</blue><hover:show_text:'<gold>Click to accept</gold>'><click:suggest_command:'/party join %name%'><#b366ff> <light_purple>%name%</light_purple> suggest you to join his party</#b366ff></click></hover>"
+  private_invite: "<blue>[</blue>Party<blue>]</blue><hover:show_text:'<gold>Click to accept</gold>'><click:suggest_command:'/party join %name%'><#b366ff> <light_purple>%name%</light_purple> invited you to join his party</#b366ff></click></hover>"
+  notify_private_invite: "<blue>[</blue>Party<blue>]</blue><aqua> <yellow>%who%</yellow> invited <yellow>%name%</yellow> to the party</aqua>"
+  help_create_allowed: "<#7897ff><click:run_command:'/%label% create'><hover:show_text:'<gold>Click to execute</gold>\n<yellow>Create a party</yellow>'>/%label% create</hover></click></#7897ff>"
+  help_create_unallowed: "<gold><click:suggest_command:'/%label% create'><hover:show_text:'<gold>Click to suggest</gold>\n<yellow>Create a party</yellow>'>/%label% create</hover></click></gold>"
+  help_join_allowed: "<#7897ff><click:suggest_command:'/%label% join '><hover:show_text:\"<gold>Click to suggest</gold>\n<yellow>Join player's party</yellow>\">/%label% join <aqua><player></aqua></hover></click></#7897ff>"
+  help_join_unallowed: "<gold><click:suggest_command:'/%label% join '><hover:show_text:\"<gold>Click to suggest</gold>\n<yellow>Join player's party</yellow>\">/%label% join <#ffcf4a><player></#ffcf4a></hover></click></gold>"
+  help_info_allowed: "<#7897ff><click:suggest_command:'/%label% info '><hover:show_text:\"<gold>Click to suggest</gold>\n<yellow>Shows player's party info</yellow>\">/%label% info <aqua>[player=you]</aqua></hover></click></#7897ff>"
+  help_info_unallowed: "<gold><click:suggest_command:'/%label% info '><hover:show_text:\"<gold>Click to suggest</gold>\n<yellow>Shows player's party info</yellow>\">/%label% info <#ffcf4a>[player=you]</#ffcf4a></hover></click></gold>"
+  help_list_allowed: "<#7897ff><click:suggest_command:'/%label% list '><hover:show_text:'<gold>Click to suggest</gold><yellow>Shows party list</yellow>'>/%label% list <aqua>[page=1]</aqua></hover></click></#7897ff>"
+  help_list_unallowed: "<gold><click:suggest_command:'/%label% list '><hover:show_text:'<gold>Click to suggest</gold><yellow>Shows party list</yellow>'>/%label% list <#ffcf4a>[page=1]</#ffcf4a></hover></click></gold>"
+  help_leave_allowed: "<#7897ff><click:suggest_command:'/%label% leave'><hover:show_text:'<gold>Click to suggest</gold><yellow>Leave your party</yellow>'>/%label% leave</hover></click></#7897ff>"
+  help_leave_unallowed: "<gold><click:suggest_command:'/%label% leave'><hover:show_text:'<gold>Click to suggest</gold><yellow>Leave your party</yellow>'>/%label% leave</hover></click></gold>"
+  help_invite_allowed: "<#7897ff><click:suggest_command:'/%label% invite '><hover:show_text:'<gold>Click to suggest</gold><yellow>Invite player to party</yellow>'>/%label% invite <aqua><player></aqua></hover></click></#7897ff>"
+  help_invite_unallowed: "<gold><click:suggest_command:'/%label% invite '><hover:show_text:'<gold>Click to suggest</gold><yellow>Invite player to party</yellow>'>/%label% invite <#ffcf4a><player></#ffcf4a></hover></click></gold>"
+  help_kick_allowed: "<#7897ff><click:suggest_command:'/%label% kick '><hover:show_text:'<gold>Click to suggest</gold><yellow>Kick player from party</yellow>'>/%label% kick <aqua><player></aqua></hover></click></#7897ff>"
+  help_kick_unallowed: "<gold><click:suggest_command:'/%label% kick '><hover:show_text:'<gold>Click to suggest</gold><yellow>Kick player from party</yellow>'>/%label% kick <#ffcf4a><player></#ffcf4a></hover></click></gold>"
+  help_leader_allowed: "<#7897ff><click:suggest_command:'/%label% leader '><hover:show_text:'<gold>Click to suggest</gold><yellow>Set player as leader of the party</yellow>'>/%label% leader <aqua><player></aqua></hover></click></#7897ff>"
+  help_leader_unallowed: "<gold><click:suggest_command:'/%label% leader '><hover:show_text:'<gold>Click to suggest</gold><yellow>Set player as leader of the party</yellow>'>/%label% leader <#ffcf4a><player></#ffcf4a></hover></click></gold>"
+  help_open_allowed: "<#7897ff><click:run_command:'/%label% open'><hover:show_text:'<gold>Click to execute</gold><yellow>Make the party public\nAnyone can join the party</yellow>'>/%label% open</hover></click></#7897ff>"
+  help_open_unallowed: "<gold><click:suggest_command:'/%label% open'><hover:show_text:'<gold>Click to suggest</gold><yellow>Make the party public\nAnyone can join the party</yellow>'>/%label% open</click></gold>"
+  help_close_allowed: "<#7897ff><click:run_command:'/%label% close'><hover:show_text:'<gold>Click to execute</gold><yellow>Make the party private\nOnly players invited by you\ncan join the party</yellow>'>/%label% close</hover></click></#7897ff>"
+  help_close_unallowed: "<gold><click:suggest_command:'/%label% close'><hover:show_text:'<gold>Click to suggest</gold><yellow>Make the party private\nOnly players invited by party\nleader can join the party</yellow>'>/%label% close</click></gold>"
+  help_disband_allowed: "<#7897ff><click:run_command:'/%label% disband'><hover:show_text:'<gold>Click to suggest</gold><yellow>Delete the party</yellow>'>/%label% disband</hover></click></#7897ff>"
+  help_disband_unallowed: "<gold><click:suggest_command:'/%label% disband'><hover:show_text:'<gold>Click to suggest</gold><yellow>Delete the party</yellow>'>/%label% disband</click></gold>"
+  help_prefix: "<blue><click:run_command:'/%label% help %prev_page%'><hover:show_text:'<gold>Go to previous page</gold>'>[<aqua><b><<<</b></aqua>]</hover></click> Party Help Page <yellow>%page%</yellow> <click:run_command:'/%label% help %next_page%'><hover:show_text:'<gold>Go to next page</gold>'>[<aqua><b>>>></b></aqua>]</hover></click></blue>"
+  help_postfix: "<blue><click:run_command:'/%label% help %prev_page%'><hover:show_text:'<gold>Go to previous page</gold>'>[<aqua><b><<<</b></aqua>]</hover></click> Party Help Page <yellow>%page%</yellow> <click:run_command:'/%label% help %next_page%'><hover:show_text:'<gold>Go to next page</gold>'>[<aqua><b>>>></b></aqua>]</hover></click></blue>"
+  list_prefix: "<blue><click:run_command:'/%label% list %prev_page%'><hover:show_text:'<gold>Go to previous page</gold>'>[<aqua><b><<<</b></aqua>]</hover></click> Party List Page <yellow>%page%</yellow> <click:run_command:'/%label% list %next_page%'><hover:show_text:'<gold>Go to next page</gold>'>[<aqua><b>>>></b></aqua>]</hover></click></blue>"
+  list_postfix: "<blue><click:run_command:'/%label% list %prev_page%'><hover:show_text:'<gold>Go to previous page</gold>'>[<aqua><b><<<</b></aqua>]</hover></click> Party List Page <yellow>%page%</yellow> <click:run_command:'/%label% list %next_page%'><hover:show_text:'<gold>Go to next page</gold>'>[<aqua><b>>>></b></aqua>]</hover></click></blue>"
+  list_line: "<hover:show_text:'<gold>Click to see detailed info</gold>'><click:run_command:'/%label% info %leader%'><#7897ff><aqua><b>%index%</b></aqua>. <aqua>%leader%</aqua>'s party <green>%online%</green>/<aqua>%members%</aqua></#7897ff></click></hover>"
+  list_no_parties: "<blue>[</blue>Party<blue>]</blue><red> There are no parties with online members right now</red>"
+
+
