--- a/src/main/resources/language/en.yml
+++ b/src/main/resources/language/en.yml
@@ -5,6 +5,8 @@ door:
   redstone_sametime_info: "%current%/%max% left"
   redstone_notsametime_info: "%value% left"
   timed_info: "%current% left"
+  reversed_timed_closed_info: "<red>✗ closed forever ✗</red>"
+  reversed_timed_open_info: "<yellow>⚠ %current% left to enter ⚠"
 party:
   has_no_party: "<blue>[</blue>Party<blue>]</blue><red> You don't have a party</red>"
   has_party: "<blue>[</blue>Party<blue>]</blue><red> You already have a party</red>"
@@ -72,6 +74,9 @@ party:
 buildermode:
   actionbar: "<gold>You are on Builder Mode"
 doorbuilder:
+  base_msg_must_set_area: "<blue>[</blue>Party<blue>]</blue><red> Set door area with WorldEdit before continue</red>"
+  base_msg_area_is_outside_room: "<blue>[</blue>Party<blue>]</blue><red> Selected area is outside (or partially outside) the room</red>"
+  base_msg_spawn_is_outside_room: "<blue>[</blue>Party<blue>]</blue><red> Selected spawn point is outside (or partially outside) the room</red>"
   base_area_info:
     - "<gold>Info: Set door Area"
     - "<#7897ff>Select the area with worldedit"
@@ -117,8 +122,8 @@ doorbuilder:
   base_commandata_cooldowntitle: "<blue>Cooldown settings"
   base_commandata_cooldowneditor:
     - "<gold>Time: <yellow>%value%</yellow> (<yellow>%value_raw%</yellow> s)"
-    - "<7897ff>How much time until door reopens?"
-    - "<7897ff>cooldown is personal to each player"
+    - "<#7897ff>How much time until door reopens?"
+    - "<#7897ff>cooldown is personal to each player"
   base_commondata_confirm:
     - "<gold>Confirm Data</gold>"
     - "<#7897ff>Confirm current setting"
@@ -137,7 +142,15 @@ doorbuilder:
   pressure_plates_confirm:
     - "<gold>Confirm Selected Pressure Plates"
     - "<#7897ff>Confirm current settings"
-  guardian_door_gui_title: "<blue>Guardian door"
+  guardian_door_guititle: "<blue>Guardian door"
+  guardian_door_guiselector_base:
+    - "<gold>EntityType selector"
+    - "<blue>Selected EntityType: <yellow>%amount%"
+  guardian_door_guiselector_line: "<blue> - <yellow>%id%"
+  guardian_door_guiselector_item:
+    - "<gold><bold>%id%"
+    - "<#7897ff>Selected: %selected%"
+    - "<#7897ff>Click to toggle"
   guardian_entitytype_info:
     - "<gold>Info: Set guardian door details"
     - "<#7897ff>Select specified guardian entity type"
@@ -175,6 +188,9 @@ doorbuilder:
     - "<gold>Confirm Selected Blocks"
     - "<#7897ff>Confirm current settings"
   timed_door_gui_title: "<blue>Timed door"
+  timed_door_gui_item:
+    - "<gold>Time: <yellow>%value%"
+    - "<#7897ff>How much time <u>until door opens</u>?"
   timed_door_info:
     - "<gold>Info: Set Cooldown before opening"
     - "<#7897ff>This door will open after some time"
@@ -183,9 +199,30 @@ doorbuilder:
     - "<gold>Edit Duration (%value%)</gold>"
     - "<#7897ff>Click to open gui"
   timed_door_confirm:
-    - "<gold>Confirm Selected Blocks"
+    - "<gold>Confirm Selected Duration"
+    - "<#7897ff>Confirm current settings"
+  reversed_timed_door_gui_title: "<blue>Reversed Timed door"
+  reversed_timed_door_gui_item:
+    - "<gold>Time: <yellow>%value%"
+    - "<#7897ff>How much time <u>until door closes forever</u>?"
+    - "<#7897ff>Once closed, players won't be able to use it"
+  reversed_timed_door_info:
+    - "<gold>Info: Set Cooldown before closing"
+    - "<#7897ff>This door will close after some time"
+    - "<#7897ff>has passed, you can edit the duration"
+  reversed_timed_door_selector:
+    - "<gold>Edit Duration (%value%)</gold>"
+    - "<#7897ff>Click to open gui"
+  reversed_timed_lock_selector:
+    - "<gold>Permanently unlock if went through (current: %value%)</gold>"
+    - "<#7897ff>When true the door will stay open after the"
+    - "<#7897ff>first player goes through it"
+  reversed_timed_door_confirm:
+    - "<gold>Confirm Selected Duration"
     - "<#7897ff>Confirm current settings"
 roombuilder:
+  base_msg_must_set_area: "<blue>[</blue>Party<blue>]</blue><red> Set room area with WorldEdit before continue</red>"
+  base_msg_too_small: "<blue>[</blue>Party<blue>]</blue><red> Selected area is too small</red>"
   base_area_info:
     - "<gold>Info: Set Room Area"
     - "<#7897ff>Select the area with worldedit"
@@ -204,6 +241,12 @@ roombuilder:
     - "<gold>Confirm Area"
     - "<#7897ff>Confirm selected worldedit"
     - "<#7897ff>region as room area"
+  base_exits_guititle: "<blue>Choose an Exit Door type"
+  base_exits_guihelp:
+    - "<white>Choose door type"
+  base_exits_guiitem:
+    - "<gold><bold>%id%"
+    - "<#7897ff>Click to choose"
   base_exits_info:
     - "<gold>Info: Add Room Exits"
     - "<#7897ff>Select the exit type to add a new exit"
@@ -231,7 +274,24 @@ roombuilder:
   base_commondata_confirm:
     - "<gold>Confirm Data</gold>"
     - "<#7897ff>Confirm current setting"
+  base_commondata_guibreaktitle: "<blue>Choose Breakable blocks"
+  base_commondata_guibreakhelp:
+    - "<white>Choose blocks players should be able"
+    - "<white>to break inside this room"
+  base_commondata_guibreakitem:
+    - "<gold><bold>%id%"
+    - "<#7897ff>Selected: %selected%"
+    - "<#7897ff>Click to toggle"
+  base_commondata_guiplacetitle: "<blue>Choose Placeable blocks"
+  base_commondata_guiplacehelp:
+    - "<white>Choose blocks players should be able"
+    - "<white>to place inside this room"
+  base_commondata_guiplaceitem:
+    - "<gold><bold>%id%"
+    - "<#7897ff>Selected: %selected%"
+    - "<#7897ff>Click to toggle"
 dungeonbuilder:
+  rgs_msg_setup_incomplete: "<blue>[</blue>Party<blue>]</blue><red> Configuration is uncompleted</red>"
   rgs_base_info:
     - "<gold>Info: Configure Dungeon"
     - "<#7897ff>Open the gui to configure groups"
@@ -250,39 +310,39 @@ dungeonbuilder:
   rgs_groupsgui_title: "<blue>Groups"
   rgs_groupsgui_groupdesc:
     - "<gold>Group #<yellow>%index%"
-    - "<7897ff>Selected rooms: <yellow>%size%"
-    - "<7897ff>Length: <yellow>%min_len%</yellow> to <yellow>%max_len%"
+    - "<#7897ff>Selected rooms: <yellow>%size%"
+    - "<#7897ff>Length: <yellow>%min_len%</yellow> to <yellow>%max_len%"
     - ""
-    - "<7897ff>[<white>Click Left/Right</white>] <white>Edit"
-    - "<7897ff>[<white>Click Shift Left/Right</white>] <white>Move Left/Right"
-    - "<7897ff>[<white>Press <key:key.swapOffhand></white>] <red>Delete"
+    - "<#7897ff>[<white>Click Left/Right</white>] <white>Edit"
+    - "<#7897ff>[<white>Click Shift Left/Right</white>] <white>Move Left/Right"
+    - "<#7897ff>[<white>Press <key:key.swapOffhand></white>] <red>Delete"
   rgs_groupsgui_groupadd:
     - "<gold>Add a new Group"
   rgs_groupgui_title: "<blue>Group #%index%"
   rgs_groupgui_selectorbase:
     - "<gold>Room selector"
-    - "<7897ff>Selected rooms: <yellow>%size%"
+    - "<#7897ff>Selected rooms: <yellow>%size%"
     - ""
   rgs_groupgui_selectorroominfo:
-    - "<7897ff> - <yellow>%id% </yellow>(weight <yellow>%weight%</yellow>)"
+    - "<#7897ff> - <yellow>%id% </yellow>(weight <yellow>%weight%</yellow>)"
   rgs_selectorgui_roominfo:
     - "<gold>Room ID: <yellow>%id%"
-    - "<7897ff>Room Type: <yellow>%type%"
-    - "<7897ff>Enabled: %selected%"
+    - "<#7897ff>Room Type: <yellow>%type%"
+    - "<#7897ff>Enabled: %selected%"
   rgs_groupgui_min:
     - "<gold>Min Depth: <yellow>%min%"
-    - "<7897ff>(max: %max%)"
+    - "<#7897ff>(max: %max%)"
     - ""
-    - "<7897ff>How many rooms depth at <u>least</u> for this group?"
+    - "<#7897ff>How many rooms depth at <u>least</u> for this group?"
   rgs_groupgui_max:
     - "<gold>Max Depth: <yellow>%max%"
-    - "<7897ff>(min: %min%)"
+    - "<#7897ff>(min: %min%)"
     - ""
-    - "<7897ff>How many rooms depth at <u>most</u> for this group?"
+    - "<#7897ff>How many rooms depth at <u>most</u> for this group?"
   rgs_groupgui_weighteditor:
     - "<gold>Weight editor"
-    - "<7897ff>Change rooms weight"
+    - "<#7897ff>Change rooms weight"
   rgs_weightgui_title: "<blue>Group #%index%  Weight editor"
   rgs_weightgui_roominfo:
     - "<gold>Room: <yellow>%id%"
-    - "<7897ff>Weight: <yellow>%weight%</yellow>/<yellow>%full_weight%</yellow> = ~<yellow>%perc_weight%</yellow> %"
+    - "<#7897ff>Weight: <yellow>%weight%</yellow>/<yellow>%full_weight%</yellow> = ~<yellow>%perc_weight%</yellow> %"
